feat: 🎸 wip: add feature to change product quantity
